--- a/css/main.css
+++ b/css/main.css
@@ -29,7 +29,8 @@ p {
 }
 
 .wrapper {
-	width: 1080px;
+	max-width: 1080px;
+    padding: 0 40px;
 	margin: 80px auto;
 }
 
@@ -69,40 +70,6 @@ p {
 
     }
 
-.img-grid4 {
-    display: block;
-    float: left;
-    margin: 10px;
-}
-
-    .img-grid4 img {
-        width: 250px;
-        height: auto;
-    }
-
-
-.img-grid3 {
-    display: block;
-	float: left;
-	margin: 10px;
-}
-
-	.img-grid3 img {
-		width: 340px;
-        height: auto;
-	}
-
-.img-grid2 {
-    display: block;
-    float: left;
-    margin: 10px;
-}
-
-    .img-grid2 img {
-        width: 520px;
-        height: auto;
-    }
-
 /**
  * Media images
  */
@@ -113,6 +80,8 @@ p {
     -webkit-transform-style: preserve-3d;
        -moz-transform-style: preserve-3d;
             transform-style: preserve-3d;
+    display: block;
+    margin-bottom: 20px
 }
     .media-img {
         max-width: 100%;
@@ -146,18 +115,8 @@ p {
         padding-bottom: 25px;
     }
 
-
-@media only screen and (max-width: 1200px) and (min-width: 481px){
-    .wrapper {
-        max-width: 720px;
+@media screen and (max-width: 430px) {
+    .name {
+        display: none;
     }
-
-    .img-grid3 img {
-        max-width: 220px;
-        height: auto;
-    }
-}
-
-@media only screen and (max-width: 480px) {
-    
 }
