--- a/css/main.css
+++ b/css/main.css
@@ -44,12 +44,26 @@ footer {
   background-color: #212121;
   height: 60px;
   margin-top: 60px;
+  padding: 40px 0;
 }
 
 footer p {
-  line-height: 60px;
+  text-align: left;
   font-size: 10px;
+  line-height: 100%
   color: #eaeaea;
+  display: inline;
+}
+
+i {
+  color: white;
+  text-align: right;
+}
+
+.fa {
+  display: inline-block;
+  float: right;
+  margin-right: 0;
 }
 
 /* Logo Image
