--- a/css/main.css
+++ b/css/main.css
@@ -42,23 +42,41 @@ p {
 
 footer {
   background-color: #212121;
-  height: 60px;
   margin-top: 60px;
-  padding: 40px 0;
+  padding: 30px 0;
+}
+
+footer img {
+  width: 50px;
+  display: block;
+  margin: auto;
+  padding-top: 15px;
 }
 
 footer p {
-  text-align: left;
+  text-align: center;
   font-size: 10px;
-  line-height: 100%
-  color: #eaeaea;
-  display: inline;
+  color: black;
+  margin-top: 20px;
+  text-transform: uppercase;
+  margin-bottom: 0;
+  padding-bottom: 15px;
+}
+
+.left-col {
+  border-right: 2px solid #000;
 }
 
 .fa {
   display: inline-block;
-  float: right;
   margin-right: 0;
+  padding: 26px 15px;
+}
+
+footer i {
+  color: black;
+  display: inline-block;
+  padding:
 }
 
 /* Logo Image
