--- a/css/main.css
+++ b/css/main.css
@@ -68,12 +68,17 @@ footer p {
   margin-right: 0;
   padding: 0 15px;
 }
-.icons {
+
+.about a {
   color: black;
   display: inline-block;
+}
+
+.icons {
   text-decoration: none;
 }
-.icons:hover {
+
+.about a:hover {
   color: rgba(255, 81, 72, 0.9);
 }
 
@@ -84,7 +89,7 @@ footer p {
   padding-top: 60px;
 }
 
-.about hr {
+hr {
   width: 30px;
   color: #212121;
   border: none;
