--- a/css/main.css
+++ b/css/main.css
@@ -86,6 +86,10 @@ footer p {
   color: rgba(255, 81, 72, 0.9);
 }
 
+.about a:visited {
+  color: black;
+}
+
 .about {
   background-color: #f9f9f9;
   margin-top: 100px;
