--- a/css/main.css
+++ b/css/main.css
@@ -78,20 +78,16 @@ footer p {
   display: inline-block;
 }
 
-.icons {
-  text-decoration: none;
+a:visited {
+  color: black;
 }
 
 .about a:hover {
   color: rgba(255, 81, 72, 0.9);
 }
 
-.about a:visited {
-  color: black;
-}
-
-.about a:active {
-  color: black;
+.icons {
+  text-decoration: none;
 }
 
 .about {
