--- a/css/main.css
+++ b/css/main.css
@@ -1,130 +1,138 @@
 html {
-  background-color: #212121;
+    background-color: #212121;
 }
 
 body {
-  margin: 0;
-  padding: 0;
-  font-family: 'Open Sans', sans-serif;
-  color: #272727;
-  background-color: #fff;
+    margin: 0;
+    padding: 0;
+    font-family: 'Open Sans', sans-serif;
+    color: #272727;
+    background-color: #fff;
 }
 
 header {
-  width: 100%;
-  padding: 0 0;
-  border-top: 4px solid #212121;
+    width: 100%;
+    padding: 0 0;
+    border-top: 4px solid #212121;
 }
 
 h1 {
-  text-align: center;
-  text-transform: uppercase;
-  font-weight: normal;
-  color: #212121;
-  font-size: 15px;
+    text-align: center;
+    text-transform: uppercase;
+    font-weight: normal;
+    color: #212121;
+    font-size: 15px;
 }
 
 h2 {
-  text-align: center;
-  color: #272727;
-  font-weight: normal;
+    text-align: center;
+    color: #272727;
+    font-weight: normal;
 }
 
 p {
-  text-align: center;
-  color: #EAEAEA;
+    text-align: center;
+    color: #EAEAEA;
 }
 
 .wrapper {
-  max-width: 1080px;
-  padding: 0 40px;
-  margin: 80px auto 0 auto;
+    max-width: 1080px;
+    padding: 0 40px;
+    margin: 80px auto 0 auto;
 }
 
 footer {
-  background-color: #212121;
-  padding: 30px 0;
+    background-color: #212121;
+    padding: 30px 0;
 }
 
 footer img {
-  width: 50px;
-  display: block;
-  margin: auto;
-  padding-top: 15px;
+    width: 50px;
+    display: block;
+    margin: auto;
+    padding-top: 15px;
 }
 
 footer .row {
-  margin-right: 0;
+    margin-right: 0;
 }
 
 footer p {
-  text-align: center;
-  font-size: 10px;
-  color: black;
-  margin-top: 20px;
-  text-transform: uppercase;
-  margin-bottom: 0;
-  padding-bottom: 15px;
+    text-align: center;
+    font-size: 10px;
+    color: black;
+    margin-top: 20px;
+    text-transform: uppercase;
+    margin-bottom: 0;
+    padding-bottom: 15px;
 }
 
 .fa {
-  display: inline-block;
-  margin-right: 0;
-  padding: 0 15px;
+    display: inline-block;
+    margin-right: 0;
+    padding: 0 15px;
 }
 
 .about a {
-  color: black;
-  display: inline-block;
+    color: black;
+    display: inline-block;
 }
 
 .about a:hover {
-  color: rgba(255, 81, 72, 0.9);
+    color: rgba(255, 81, 72, 0.9);
 }
 
 .icons {
-  text-decoration: none;
+    text-decoration: none;
 }
 
 .about {
-  background-color: #f9f9f9;
-  margin-top: 100px;
-  padding-bottom: 60px;
-  padding-top: 60px;
-  padding-left: 20px;
-  padding-right: 20px;
+    background-color: #f9f9f9;
+    margin-top: 100px;
+    padding-bottom: 60px;
+    padding-top: 60px;
+    padding-left: 20px;
+    padding-right: 20px;
 
 }
 
 hr {
-  width: 30px;
-  color: #212121;
-  border: none;
-  border-bottom: 2px solid;
-  margin-bottom: 30px;
+    width: 30px;
+    color: #212121;
+    border: none;
+    border-bottom: 2px solid;
+    margin-bottom: 30px;
 }
 
 .about p {
-  color: #212121;
-  font-size: 12px;
-  margin-bottom: 40px;
+    color: #212121;
+    font-size: 12px;
+    margin-bottom: 40px;
 }
 
 .project-desc {
-  color: #212121;
-  font-size: 12px;
-  margin: auto;
-  margin-bottom: 80px;
-  max-width: 500px;
+    color: #212121;
+    font-size: 12px;
+    margin: auto;
+    margin-bottom: 80px;
+    max-width: 500px;
 }
 
 /* Logo Image
 ----------------------------*/
-.logo-img { /* Logo */
+.logo-container {
+    position: relative;
+    text-align: center;
+    z-index: 2;
+}
+
+.logo-link {
+    display: inline-block;
+}
+
+.logo-img {
     height: 80px;
-    width: auto;
     display: block;
-    margin: auto;
 }
 
 /* Name
@@ -132,6 +140,7 @@ hr {
 .name-container {
     text-align: center;
     position: absolute;
+    z-index: 1;
     width: 100%;
 }
     .name {
