added project images

--- a/css/main.css
+++ b/css/main.css
@@ -208,6 +208,10 @@ hr {
         padding-bottom: 25px;
     }
 
+.project-img {
+    margin-bottom: 20px;
+}
+
 
 @media screen and (max-width: 430px) {
     .name {
