--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,15 @@
+@font-face {
+  font-family: 'Panton-Regular';
+  src: url('Panton-Regular.eot');
+  src: url('Panton-Regular.woff2') format('woff2'),
+       url('Panton-Regular.woff') format('woff'),
+       url('Panton-Regular.ttf') format('truetype'),
+       url('Panton-Regular.svg#Panton-Regular') format('svg'),
+       url('Panton-Regular.eot?#iefix') format('embedded-opentype');
+  font-weight: normal;
+  font-style: normal;
+}
+
 html {
     background-color: #212121;
 }
@@ -17,6 +29,7 @@ header {
 }
 
 h1 {
+    font-family: 'Panton';
     text-align: center;
     text-transform: uppercase;
     font-weight: normal;
