--- a/css/main.css
+++ b/css/main.css
@@ -49,7 +49,7 @@ p {
 }
 
 .wrapper {
-    max-width: 1080px;
+    max-width: 980px;
     padding: 0 40px;
     margin: 80px auto 0 auto;
 }
@@ -135,7 +135,7 @@ hr {
     color: #212121;
     font-size: 12px;
     margin: auto;
-    margin-bottom: 80px;
+    margin-bottom: 40px;
     max-width: 500px;
 }
 
@@ -143,6 +143,7 @@ hr {
 ----------------------------*/
 .logo-container {
     position: relative;
+    margin-top: 40px;
     text-align: center;
     z-index: 2;
 }
@@ -152,38 +153,9 @@ hr {
 }
 
 .logo-img {
-    padding-top: 40px;
     height: 40px;
     display: block;
 }
-
-/* Name
-----------------------------*/
-.name-container {
-    text-align: center;
-    position: absolute;
-    z-index: 1;
-    width: 100%;
-}
-    .name {
-        display: inline-block;
-        color: #212121;
-        line-height: 80px;
-        width: 100px;
-        text-transform: uppercase;
-        font-weight: normal;
-        font-size: 13px;
-        letter-spacing: 4px;
-    }
-    .name-left {
-        text-align: right;
-        margin-right: 65px;
-    }
-    .name-right {
-        text-align: left;
-        margin-left: 65px;
-
-    }
 
 /**
  * Media images
@@ -210,7 +182,7 @@ hr {
         z-index: 2;
         text-align: center;
         color: #fff;
-        background: rgba(255, 81, 72, 0.9);
+        background: rgba(0, 0, 0, 0.7);
         opacity: 0;
         -webkit-transition: opacity .15s ease-in-out;
            -moz-transition: opacity .15s ease-in-out;
@@ -227,7 +199,8 @@ hr {
                 transform: translateY(-50%);
     }
     .media-overlay-content p {
-        padding-bottom: 25px;
+        padding-bottom: 12px;
+        font-family: 'Panton';
     }
 
 .project-img {
