--- a/css/main.css
+++ b/css/main.css
@@ -29,7 +29,7 @@ header {
 }
 
 h1 {
-    font-family: 'Panton';
+    font-family: 'Panton', 'Open Sans', sans-serif;
     text-align: center;
     text-transform: uppercase;
     font-weight: normal;
@@ -200,7 +200,7 @@ hr {
     }
     .media-overlay-content p {
         padding-bottom: 12px;
-        font-family: 'Panton';
+        font-family: 'Panton','Open Sans', sans-serif;
     }
 
 .project-img {
