--- a/css/main.css
+++ b/css/main.css
@@ -90,15 +90,15 @@ footer p {
     font-family: 'Panton', 'Open Sans', serif;
     display: block;
     text-transform: uppercase;
-    border: 2px solid rgba(0, 174, 129, 1);
+    border: 2px solid rgba(0, 174, 129, 0.6);
     padding: 20px 0;
     color: rgba(0, 0, 0, 0.8);
     margin: 0;
 }
 
 .contact-btn p:hover {
-    border-color: rgba(0, 174, 129, 0.5);
-    color: rgba(0, 0, 0, 0.5)
+    border-color: rgba(0, 174, 129, 1);
+    color: rgba(0, 0, 0, 0.7)
 }
 
 .social-link {
@@ -106,7 +106,7 @@ footer p {
 }
 
 .social-link:hover {
-    color: #d6c152;
+    color: rgba(0, 174, 129, 1);
 }
 
 .fa {
@@ -121,7 +121,7 @@ footer p {
 }
 
 .about a:hover {
-    color: #d6c152;
+    color: rgba(0, 174, 129, 1);
 }
 
 .icons {
