--- a/css/main.css
+++ b/css/main.css
@@ -279,7 +279,7 @@ hr {
         z-index: 2;
         text-align: center;
         color: #fff;
-        background: rgba(33, 33, 33, 0.99);
+        background: rgba(33, 33, 33, 1);
         opacity: 0;
         -webkit-transition: opacity .15s ease-in-out;
            -moz-transition: opacity .15s ease-in-out;
@@ -312,5 +312,10 @@ hr {
 
     footer p, .links {
         text-align: center;
+        font-size: 10px;
+    }
+
+    .links {
+        font-size: 14px;
     }
 }
