--- a/layouts/index.html
+++ b/layouts/index.html
@@ -2,7 +2,7 @@
     <h1 class="first-el">About</h1>
     <hr align="left">
     <h2>
-        I'm Matthew, I'm a passionate logo &amp; brand identity designer based in the North East of England. I currently work for
+        I'm Matthew, I'm a passionate Logo &amp; Brand Identity Designer based in the North East of England. I currently work for
         <a href="https://www.betterbrandagency.com/" class="better-link">Better Brand Agency</a> and I'm available for freelance projects. Get in touch via
         <a href="mailto:hello@matthewgoodyear.com">Email</a> and follow me on
         <a href="https://www.instagram.com/designer.matt/">Instagram</a> to keep up to date with future projects.
