organisation and new project

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -32,31 +32,31 @@
 
     <div class="row">
         <div class="col-sm-4">
-            <img src="/img/azmonogram.jpg" alt="work" class="media-img project-img">
+            <img src="/img/misc/azmonogram.jpg" alt="work" class="media-img project-img">
         </div>
         <div class="col-sm-4">
-            <img src="/img/lumo.jpg" alt="work" class="media-img project-img">
+            <img src="/img/misc/lumo.jpg" alt="work" class="media-img project-img">
         </div>
         <div class="col-sm-4">
-            <img src="/img/mg.jpg" alt="work" class="media-img project-img">
+            <img src="/img/misc/mg.jpg" alt="work" class="media-img project-img">
         </div>
         <div class="col-sm-4">
-            <img src="/img/mykri.jpg" alt="work" class="media-img project-img">
+            <img src="/img/misc/mykri.jpg" alt="work" class="media-img project-img">
         </div>
         <div class="col-sm-4">
-            <img src="/img/tofy1.jpg" alt="work" class="media-img project-img">
+            <img src="/img/misc/tofy1.jpg" alt="work" class="media-img project-img">
         </div>
         <div class="col-sm-4">
-            <img src="/img/tofy2.jpg" alt="work" class="media-img project-img">
+            <img src="/img/misc/tofy2.jpg" alt="work" class="media-img project-img">
         </div>
         <div class="col-sm-4">
-            <img src="/img/chatdog.jpg" alt="work" class="media-img project-img">
+            <img src="/img/misc/chatdog.jpg" alt="work" class="media-img project-img">
         </div>
         <div class="col-sm-4">
-            <img src="/img/l.jpg" alt="work" class="media-img project-img">
+            <img src="/img/misc/l.jpg" alt="work" class="media-img project-img">
         </div>
         <div class="col-sm-4">
-            <img src="/img/amped-icon.jpg" alt="work" class="media-img project-img">
+            <img src="/img/misc/amped-icon.jpg" alt="work" class="media-img project-img">
         </div>
     </div>
 
