--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,5 +1,7 @@
 {{ partial "header.html" . }}
-    <h1 class="first-el">About</h1>
+
+<div class="wrapper">
+    <h1 class="first">About</h1>
     <hr align="left">
     <h2>
         I'm Matthew, I'm a passionate Logo &amp; Brand Identity Designer based in the North East of England. I currently work for
@@ -32,25 +34,28 @@
 
     <div class="row">
         <div class="col-sm-4">
-            <img src="/img/misc/azmonogram.jpg" alt="work" class="media-img project-img">
+            <img src="/img/misc/cb2.jpg" alt="work" class="media-img project-img">
+        </div>
+        <div class="col-sm-4">
+            <img src="/img/misc/cb1.jpg" alt="work" class="media-img project-img">
         </div>
         <div class="col-sm-4">
             <img src="/img/misc/lumo.jpg" alt="work" class="media-img project-img">
         </div>
         <div class="col-sm-4">
-            <img src="/img/misc/mg.jpg" alt="work" class="media-img project-img">
+            <img src="/img/misc/mg1.jpg" alt="work" class="media-img project-img">
         </div>
         <div class="col-sm-4">
-            <img src="/img/misc/mykri.jpg" alt="work" class="media-img project-img">
+            <img src="/img/misc/mg2.jpg" alt="work" class="media-img project-img">
+        </div>
+        <div class="col-sm-4">
+            <img src="/img/misc/mg3.jpg" alt="work" class="media-img project-img">
         </div>
         <div class="col-sm-4">
             <img src="/img/misc/tofy1.jpg" alt="work" class="media-img project-img">
         </div>
         <div class="col-sm-4">
-            <img src="/img/misc/tofy2.jpg" alt="work" class="media-img project-img">
-        </div>
-        <div class="col-sm-4">
-            <img src="/img/misc/chatdog.jpg" alt="work" class="media-img project-img">
+            <img src="/img/misc/miscommunication.jpg" alt="work" class="media-img project-img">
         </div>
         <div class="col-sm-4">
             <img src="/img/misc/l.jpg" alt="work" class="media-img project-img">
@@ -58,6 +63,12 @@
         <div class="col-sm-4">
             <img src="/img/misc/amped-icon.jpg" alt="work" class="media-img project-img">
         </div>
+        <div class="col-sm-4">
+            <img src="/img/misc/mykri.jpg" alt="work" class="media-img project-img">
+        </div>
+        <div class="col-sm-4">
+            <img src="/img/misc/azmonogram.jpg" alt="work" class="media-img project-img">
+        </div>
     </div>
-
+</div>
 {{ partial "footer.html" . }}
