--- a/static/css/main.css
+++ b/static/css/main.css
@@ -93,7 +93,7 @@ h1 {
     margin-top: 80px;
 }
 
-body h1:first-child {
+h1.first {
     padding-top: 173px;
     margin-top: 0;
 }
@@ -233,6 +233,11 @@ footer {
 
 .project-img {
     margin-bottom: 20px;
+}
+
+.project-banner {
+    width: 100%;
+    margin-top: 94px;
 }
 
 @media only screen and (max-width : 767px) {
