Banner and Logo Scaling + Improvements

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -236,9 +236,20 @@ footer {
 }
 
 .project-banner {
+    background-color: #f2f2f2;
+    background-position: center;
+    background-size: cover;
     width: 100%;
+    height: 450px;
     margin-top: 94px;
+    display: inline-block;
 }
+    .project-banner-logo {
+        display: block;
+        margin: auto;
+        width: 180px;
+        margin-top: 135px;
+    }
 
 @media only screen and (max-width : 767px) {
     .start-project {
