--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,7 +1,9 @@
 {{ partial "header.html" . }}
 
 {{ if isset .Params "banner" }}
-    <img src="{{ $.Param "banner" }}" class="project-banner"/>
+    <div class="project-banner" style="background-image: url({{ $.Param "banner" }});">
+        <img class="project-banner-logo" src="{{ $.Param "banner-logo" }}" style="{{ $.Param "display" }}">
+    </div>
 {{ end}}
 
 <div class="wrapper">
