Image Description Styles, Image Optim/Reduction

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -42,6 +42,9 @@
         <div class="col-sm-4">
             <img src="/img/misc/lumo.jpg" alt="work" class="media-img project-img">
         </div>
+        <div class="col-sm-12">
+            <h3>Logo proposals (for clients of <a href="https://www.betterbrandagency.com/" class="better-link">Better</a>) during my current employment. Keep updated on new projects via <a href="https://www.instagram.com/designer.matt/">Instagram</a>.</h3>
+        </div>
         <div class="col-sm-4">
             <img src="/img/misc/mg1.jpg" alt="work" class="media-img project-img">
         </div>
@@ -50,6 +53,9 @@
         </div>
         <div class="col-sm-4">
             <img src="/img/misc/mg3.jpg" alt="work" class="media-img project-img">
+        </div>
+        <div class="col-sm-12">
+            <h3>Unused monograms for my personal rebrand. Full project coming soon.</h3>
         </div>
         <div class="col-sm-4">
             <img src="/img/misc/tofy1.jpg" alt="work" class="media-img project-img">
@@ -68,6 +74,9 @@
         </div>
         <div class="col-sm-4">
             <img src="/img/misc/azmonogram.jpg" alt="work" class="media-img project-img">
+        </div>
+        <div class="col-sm-12">
+            <h3>Work created during my time at <a href="../project/ss17/">CCAD</a>.</h3>
         </div>
     </div>
 </div>
