--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -34,7 +34,7 @@
 <body>
     <header>
         <div class="header-container">
-            <div class="row">
+            <div class="row row-center">
                 <div class="col-sm-12">
                     <a class="logo-link" href="{{ $.Site.BaseURL }}">
                         <img src="{{ $.Site.BaseURL }}img/MG_Logo_Dark@0.5x.png" alt="Logo" class="logo-img">
