--- a/static/css/main.css
+++ b/static/css/main.css
@@ -99,7 +99,6 @@ h1.first {
 }
 
 hr {
-    width: 100%;
     color: #212121;
     border: none;
     width: 30px;
@@ -117,7 +116,7 @@ h2 {
     max-width: 80%;
     font-weight: normal;
 }
-    h2 a {
+    h2 a, h3 a {
         padding-bottom: 2px;
         border-bottom: 1px solid;
     }
@@ -125,6 +124,15 @@ h2 {
     .better-link:hover {
         color: #E2007C;
     }
+
+h3 {
+    color: #aaa;
+    font-size: 16px;
+    margin: 0 0 60px 0;
+    padding-top: 7px;
+    display: block;
+    border-top: 1px solid #aaa;
+}
 
 footer {
     max-width: 1280px;
@@ -252,6 +260,20 @@ footer {
     }
 
 @media only screen and (max-width : 767px) {
+    header {
+        padding: 20px 0;
+    }
+        .row-center {
+            -webkit-box-pack: center;
+            -ms-flex-pack: center;
+            justify-content: center;
+            text-align: center;
+        }
+
+    .logo-img {
+        height: 25px;
+    }
+
     .start-project {
         display: none;
         visibility: hidden;
@@ -271,8 +293,24 @@ footer {
         visibility: hidden;
     }
 
+    h1 {
+        text-align: center;
+    }
+
+    hr {
+        margin: auto;
+        margin-bottom: 30px;
+    }
+
     h2 {
-        max-width: 100%;
+        max-width: 90%;
+        text-align: center;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    h3 {
+        text-align: center;
     }
 
     .row {
