--- a/static/css/main.css
+++ b/static/css/main.css
@@ -109,7 +109,7 @@ hr {
 h2 {
     font-family: 'FF-Din';
     color: #aaa;
-    font-size: 22px;
+    font-size: 20px;
     line-height: 30px;
     text-align: left;
     margin-bottom: 80px;
@@ -295,6 +295,7 @@ footer {
 
     h1 {
         text-align: center;
+        font-size: 16px;
     }
 
     hr {
@@ -303,7 +304,9 @@ footer {
     }
 
     h2 {
-        max-width: 90%;
+        max-width: 98%;
+        font-size: 16px;
+        line-height: 25px;
         text-align: center;
         margin-left: auto;
         margin-right: auto;
