--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>{{ with .Page.Params.Title }}{{ . }} | {{ end }}Goodyear | Branding & Identity</title>
+    <title>{{ with .Page.Params.Title }}{{ . }} | {{ end }}Goodyear | Logo & Identity</title>
     {{ with .Page.Params.description }}
     <meta name="description" content="{{ . }}">
     {{ else }}
@@ -17,6 +17,7 @@
 
     <link rel="stylesheet" type="text/css" href="{{ $.Site.BaseURL }}css/flexboxgrid.css">
     <link rel="stylesheet" type="text/css" href="{{ $.Site.BaseURL }}css/main.css">
+    <link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet">
 
     <script>
         (function (i, s, o, g, r, a, m) {
