--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -17,7 +17,9 @@
 
     <link rel="stylesheet" type="text/css" href="{{ $.Site.BaseURL }}css/flexboxgrid.css">
     <link rel="stylesheet" type="text/css" href="{{ $.Site.BaseURL }}css/main.css">
-    <link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Alegreya:400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Merriweather:300,700" rel="stylesheet">
+
 
     <script>
         (function (i, s, o, g, r, a, m) {
@@ -38,11 +40,11 @@
             <div class="row row-center">
                 <div class="col-sm-12">
                     <a class="logo-link" href="{{ $.Site.BaseURL }}">
-                        <img src="{{ $.Site.BaseURL }}img/MG_Logo_Dark@0.5x.png" alt="Logo" class="logo-img">
+                        <img src="{{ $.Site.BaseURL }}img/MG_Logo_Icon_Dark@0.5x.png" alt="Logo" class="logo-img">
                     </a>
 
                     <p class="start-project">
-                        <a href="mailto:hello@matthewgoodyear.com?subject=New Project Idea&body=Hi, I'm looking to start a project,">Start a project</a>
+                        <a href="mailto:hello@matthewgoodyear.com?subject=New Project Idea&body=Hi, I'm looking to start a project,">Get in touch</a>
                     </p>
                 </div>
             </div>
