--- a/static/css/main.css
+++ b/static/css/main.css
@@ -21,7 +21,8 @@ html {
 body {
     margin: 0;
     padding: 0;
-    font-family: 'FF-Din', 'Open Sans', sans-serif;
+    font-family: 'Merriweather', 'Open Sans', sans-serif;
+    -webkit-font-smoothing: antialiased;
     color: #272727;
     background-color: #fff;
 }
@@ -41,14 +42,19 @@ a:hover {
     margin: auto;
 }
 
+.main-content-wrapper {
+    max-width: 980px;
+    margin: auto;
+}
+
 
 header {
     width: 100%;
     border-top: 3px solid #212121;
     z-index: 100;
     background-color: #fff;
-    position: fixed;
-    padding: 30px 0;
+    /*position: fixed;*/
+    padding: 40px 0;
 }
 
 .header-container {
@@ -62,9 +68,9 @@ header {
     float: right;
     margin-top: 0;
     margin-bottom: 0;
-    font-size: 18px;
-    line-height: 30px;
-    text-transform: uppercase;
+    font-size: 20px;
+    line-height: 40px;
+    /*text-transform: uppercase;*/
     border-bottom: 1px solid #aaa;
 }
 
@@ -73,7 +79,7 @@ header {
 }
 
 .logo-img {
-    height: 30px;
+    height: 40px;
     display: block;
     opacity: 1;
 }
@@ -84,55 +90,78 @@ header {
 
 
 h1 {
-    text-align: left;
-    text-transform: uppercase;
-    font-weight: Regular;
+    font-size: 28px;
+    font-weight: 400;
+    text-align: center;
     color: #212121;
-    font-size: 20px;
+    letter-spacing: -1px;
+    line-height: 48px;
+    width: 80%;
+    margin: 150px auto 0 auto;
     display: block;
-    margin-top: 80px;
 }
-
-h1.first {
-    padding-top: 173px;
-    margin-top: 0;
-}
-
-hr {
-    color: #212121;
-    border: none;
-    width: 30px;
-    border-bottom: 2px solid;
-    margin-bottom: 30px;
-}
-
-h2 {
-    color: #aaa;
-    font-size: 20px;
-    line-height: 30px;
-    text-align: left;
-    margin-bottom: 80px;
-    max-width: 80%;
-    font-weight: 300;
-}
-    h2 a, h3 a {
+    hr {
+        color: #212121;
+        border: none;
+        width: 30px;
+        border-bottom: 2px solid;
+        margin-bottom: 150px;
+    }
+    h1 a {
         padding-bottom: 2px;
         border-bottom: 1px solid;
+        color: #212121
     }
-
     .better-link:hover {
         color: #E2007C;
     }
 
+h2 {
+    font-size: 22px;
+    text-align: center;
+    letter-spacing: -1px;
+    /*text-transform: uppercase;*/
+    font-weight: 400;
+    color: #212121;
+    display: block;
+    margin: 120px auto 120px auto;
+    max-width: 80%;
+}
+    h2.first {
+        padding-top: 173px;
+        margin-top: 0;
+    }
+
 h3 {
+    font-size: 22px;
+    font-weight: 400;
+    text-align: center;
+    color: #212121;
+    letter-spacing: -1px;
+    width: 80%;
+    margin: 150px auto 0 auto;
+    display: block;
+}
+    hr.line-no-pad {
+        color: #212121;
+        border: none;
+        width: 30px;
+        border-bottom: 2px solid;
+        margin-bottom: 40px;
+    }
+
+h4 {
     color: #aaa;
     font-size: 16px;
-    margin: 0 0 60px 0;
-    padding-top: 7px;
+    margin: 0 0 80px 0;
     display: block;
-    border-top: 1px solid #aaa;
+    /*border-top: 1px solid #aaa;*/
     font-weight: normal;
 }
+    h4 a {
+        padding-bottom: 2px;
+        border-bottom: 1px solid;
+    }
 
 footer {
     max-width: 1200px;
@@ -144,7 +173,7 @@ footer {
     text-align: right;
     font-size: 16px;
     color: rgba(33,33,33,0.4);
-    text-transform: uppercase;
+    /*text-transform: uppercase;*/
     margin-bottom: 0;
     display: inline-block;
     float: right;
@@ -158,7 +187,7 @@ footer {
 
     .links li {
         display: inline-block;
-        text-transform: uppercase;
+        /*text-transform: uppercase;*/
         padding: 0 19px 0 20px;
         border-left: 1px solid rgba(33,33,33,0.4);
     }
@@ -211,20 +240,21 @@ footer {
     }
     .media-title {
         color: #fff;
-        font-size: 28px;
+        font-size: 22px;
         text-align: left;
         padding-left: 30px;
-        margin-bottom: 15px;
+        margin-bottom: 18px;
         margin-top: 0;
         padding-top: 30px;
     }
     .media-desc{
         color: #aaa;
-        font-size: 22px;
+        font-size: 17px;
         text-align: left;
         padding-left: 30px;
         margin: 0;
         padding-bottom: 30px;
+        line-height: 28px;
     }
     .media-about {
         top: 0;
@@ -249,7 +279,6 @@ footer {
     background-size: cover;
     width: 100%;
     height: 450px;
-    margin-top: 94px;
     display: inline-block;
 }
     .project-banner-logo {
@@ -303,7 +332,7 @@ footer {
         visibility: hidden;
     }
 
-    h1 {
+    h2 {
         text-align: center;
         font-size: 16px;
     }
@@ -313,7 +342,7 @@ footer {
         margin-bottom: 30px;
     }
 
-    h2 {
+    h3 {
         max-width: 98%;
         font-size: 16px;
         line-height: 25px;
@@ -322,7 +351,7 @@ footer {
         margin-right: auto;
     }
 
-    h3 {
+    h4 {
         text-align: center;
     }
 
